design and deleted header

--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,31 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- 구글 폰트 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <!-- test -->
-    <link href="https://fonts.googleapis.com/css2?family=Kablammo&display=swap" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kablammo&display=swap"
+      rel="stylesheet"
+    />
+    <!-- 5398px 높이 -->
+    <style>
+      body {
+        margin: 0;
+      }
+      #root {
+        background-image: url(./image/Artboard_1PHOTO_LINE.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 1920px;
+        margin: auto;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
