--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         background-image: url(./image/Artboard_1PHOTO_LINE.png);
         background-repeat: no-repeat;
         background-size: cover;
-        width: 1920px;
+        /* width: 1920px; */
         margin: auto;
       }
     </style>
