--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,9 @@
       href="https://fonts.googleapis.com/css2?family=Kablammo&display=swap"
       rel="stylesheet"
     />
+
     <!-- 5398px 높이 -->
-    <style>
+    <!-- <style>
       body {
         margin: 0;
       }
@@ -49,7 +50,7 @@
         /* width: 1920px; */
         margin: auto;
       }
-    </style>
+    </style> -->
     <title>React App</title>
   </head>
   <body>
