--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- 구글 폰트 -->
+    <!-- 구글 폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- Poppins -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-    <!-- test -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kablammo&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Julius+Sans+One&family=Kablammo&family=Montserrat&display=swap"
       rel="stylesheet"
     />
 
